New features:
* Victory condition (dynamic)
* Automatic resize of the field (dynamic)

Note: The previous commit contained working code. This commit introduces unfinished features and implementation options, resulting in currently non-functional code.