@@ -1,7 +1,12 @@
 package ru.nsu.lebedev.snake.scenes;
 
 import java.util.ArrayList;
+import javafx.beans.property.DoubleProperty;
+import javafx.beans.property.SimpleDoubleProperty;
+import javafx.beans.value.ChangeListener;
+import javafx.scene.layout.ColumnConstraints;
 import javafx.scene.layout.GridPane;
+import javafx.scene.layout.RowConstraints;
 import javafx.scene.layout.StackPane;
 import javafx.scene.paint.Color;
 import javafx.scene.paint.Paint;
@@ -9,8 +14,8 @@ import javafx.scene.shape.Circle;
 import javafx.scene.shape.Rectangle;
 
 /**
- * Utility class for managing the game view. It builds a grid of cells (Rectangles) inside a
- * GridPane and allows changing cell colors.
+ * Utility class for managing the game view.
+ * It builds a grid of cells (Rectangles) inside a GridPane and allows changing cell colors.
  */
 public class GameView {
 
@@ -43,6 +48,7 @@ public class GameView {
     private ArrayList<ArrayList<StackPane>> cellPanes;
     private final int numRows;
     private final int numCols;
+    private final DoubleProperty cellSizeProperty = new SimpleDoubleProperty();
 
     /**
      * Constructs the game view with the specified grid and dimensions.
@@ -50,11 +56,23 @@ public class GameView {
      * @param grid    the GridPane container for the cells.
      * @param numRows the number of rows.
      * @param numCols the number of columns.
+     * @param width   the width of the game area.
+     * @param height  the height of the game area.
      */
-    public GameView(GridPane grid, int numRows, int numCols) {
+    public GameView(GridPane grid, int numRows, int numCols, double width, double height) {
         this.grid = grid;
         this.numRows = numRows;
         this.numCols = numCols;
+        for (int i = 0; i < numCols; i++) {
+            ColumnConstraints colConst = new ColumnConstraints();
+            colConst.setPercentWidth(100.0 / numCols);
+            grid.getColumnConstraints().add(colConst);
+        }
+        for (int i = 0; i < numRows; i++) {
+            RowConstraints rowConst = new RowConstraints();
+            rowConst.setPercentHeight(100.0 / numRows);
+            grid.getRowConstraints().add(rowConst);
+        }
         initializeField();
     }
 
@@ -63,13 +81,14 @@ public class GameView {
      *
      * @return a new StackPane representing a cell.
      */
-    private static StackPane createCell() {
-        Rectangle rectangle = new Rectangle(30, 30, Paint.valueOf(CellColor.FIELD.getHex()));
-        rectangle.getStyleClass().add("cell");
-
+    private StackPane createCell() {
         StackPane cellPane = new StackPane();
+        Rectangle rectangle = new Rectangle();
+        rectangle.widthProperty().bind(cellPane.widthProperty());
+        rectangle.heightProperty().bind(cellPane.heightProperty());
+        rectangle.setFill(Paint.valueOf(CellColor.FIELD.getHex()));
+        rectangle.getStyleClass().add("cell");
         cellPane.getChildren().add(rectangle);
-
         return cellPane;
     }
 
@@ -100,46 +119,50 @@ public class GameView {
      */
     public void setCellColor(int x, int y, CellColor color) {
         StackPane cellPane = cellPanes.get(y).get(x);
-
-        // Удаляем все дочерние элементы, кроме фона (первого элемента)
         if (cellPane.getChildren().size() > 1) {
             cellPane.getChildren().remove(1, cellPane.getChildren().size());
         }
 
-        Rectangle background = (Rectangle) cellPane.getChildren().get(0);
+        Rectangle background = (Rectangle) cellPane.getChildren().getFirst();
 
         if (color == CellColor.SNAKE) {
-            // Рисуем тело змеи
-            Rectangle snakeBody = new Rectangle(30, 30, Paint.valueOf(CellColor.SNAKE.getHex()));
-            snakeBody.setArcWidth(15);
-            snakeBody.setArcHeight(15);
+            Rectangle snakeBody = new Rectangle();
+            snakeBody.widthProperty().bind(cellSizeProperty);
+            snakeBody.heightProperty().bind(cellSizeProperty);
+            snakeBody.setFill(Paint.valueOf(CellColor.SNAKE.getHex()));
+            snakeBody.arcWidthProperty().bind(cellSizeProperty.multiply(0.5));
+            snakeBody.arcHeightProperty().bind(cellSizeProperty.multiply(0.5));
             cellPane.getChildren().add(snakeBody);
         } else if (color == CellColor.SNAKE_HEAD) {
-            // Рисуем голову змеи
-            Rectangle snakeHead = new Rectangle(30, 30,
-                Paint.valueOf(CellColor.SNAKE_HEAD.getHex()));
-            snakeHead.setArcWidth(20);
-            snakeHead.setArcHeight(20);
+            Rectangle snakeHead = new Rectangle();
+            snakeHead.widthProperty().bind(cellSizeProperty);
+            snakeHead.heightProperty().bind(cellSizeProperty);
+            snakeHead.setFill(Paint.valueOf(CellColor.SNAKE_HEAD.getHex()));
+            snakeHead.arcWidthProperty().bind(cellSizeProperty.multiply(0.7));
+            snakeHead.arcHeightProperty().bind(cellSizeProperty.multiply(0.7));
             cellPane.getChildren().add(snakeHead);
 
-            // Добавляем глаза
-            Circle leftEye = new Circle(4, Color.WHITE);
-            leftEye.setTranslateX(-6);
-            leftEye.setTranslateY(-6);
+            Circle leftEye = new Circle();
+            leftEye.radiusProperty().bind(cellSizeProperty.multiply(0.13));
+            leftEye.setFill(Color.WHITE);
+            leftEye.translateXProperty().bind(cellSizeProperty.multiply(-0.2));
+            leftEye.translateYProperty().bind(cellSizeProperty.multiply(-0.2));
 
-            Circle rightEye = new Circle(4, Color.WHITE);
-            rightEye.setTranslateX(6);
-            rightEye.setTranslateY(-6);
+            Circle rightEye = new Circle();
+            rightEye.radiusProperty().bind(cellSizeProperty.multiply(0.13));
+            rightEye.setFill(Color.WHITE);
+            rightEye.translateXProperty().bind(cellSizeProperty.multiply(0.2));
+            rightEye.translateYProperty().bind(cellSizeProperty.multiply(-0.2));
 
             cellPane.getChildren().addAll(leftEye, rightEye);
         } else if (color == CellColor.APPLE) {
-            // Рисуем яблоко
-            Circle apple = new Circle(10, Color.valueOf(CellColor.APPLE.getHex()));
+            Circle apple = new Circle();
+            apple.radiusProperty().bind(cellSizeProperty.multiply(0.3));
+            apple.setFill(Color.valueOf(CellColor.APPLE.getHex()));
             apple.setStroke(Color.BLACK);
-            apple.setStrokeWidth(2);
+            apple.strokeWidthProperty().bind(cellSizeProperty.multiply(0.05));
             cellPane.getChildren().add(apple);
         } else {
-            // Устанавливаем цвет фона для остальных клеток
             background.setFill(Paint.valueOf(color.getHex()));
         }
     }
